--- a/DX-Portal/works/css/ui.css
+++ b/DX-Portal/works/css/ui.css
@@ -3,10 +3,13 @@
 /************************************************ 
 Version : 1.0
 Date :2021-08
-*************************************************/    
-@import "conts.css";  
+*************************************************/ 
 
-/* WEBFONT */
+/* import */
+@import "conts.css";  
+@import "admin.css";
+
+/* webfont */
 @font-face {
     font-family: lgsmart;
     font-style: normal;
@@ -81,7 +84,7 @@ button, input {outline: none;}
 .clearfix:after {clear:both;}
 .hidden {position:absolute; overflow:hidden; clip:rect(0,0,0,0); width:1px; height:1px; margin:-1px; padding:0; border:0;}
 caption {overflow:hidden; clip:rect(0,0,0,0); width:1px; height:1px; margin:-1px; padding:0; border:0;}
-
+ 
 button,html input[type=button],html input[type=reset],html input[type=submit] {cursor:pointer; -webkit-appearance:button; border-radius:0;}
 button,input,optgroup,select,textarea {margin:0; font:inherit; color:inherit;}
 button,select {text-transform:none;}
@@ -99,39 +102,40 @@ label+input {margin-left:.4rem;}
 button {margin:0; padding:0; cursor:pointer; border:0; background:0 0;}
 input[type=checkout],input[type=radio] {margin-right:.4rem; padding:.5rem .5rem .3rem; border:0;}
 input[type=search] {box-sizing:content-box;}
-input[type=file],input[type=number],input[type=password],input[type=tel],input[type=text] {height:3.4rem; border-radius:.4rem; margin:0; padding:0 1rem; border: solid 1px #d6d6e3; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.04); }
+input[type=file],input[type=number],input[type=password],input[type=tel],input[type=text] { width:100%; height:3.4rem; border-radius:.4rem; margin:0; padding:0 1rem; border: solid 1px #d6d6e3; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.04); }
 input:focus {border: solid 1px #222222}
 select {padding:.4rem 3.2rem .4rem 1.2rem; border:0; border: solid 1px #d6d6e3; border-radius:.6rem; appearance:none; background:#fff url('../images/icon_arrow_dowm.png') no-repeat 100% 50%; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.04); }
 select::-ms-expand {display: none;}
+textarea { width:100%; border-radius:.4rem; margin:0; padding:1rem; border: solid 1px #d6d6e3; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.04);}
 
-/*input[type="checkbox"] {width:2rem; height:2rem; border: 1px solid #d6d6e3; -webkit-appearance: none; cursor:pointer; }
-input[type="checkbox"]:checked {width:2rem; height:2rem; border:1px solid #a50034; background: #a50034 url('../images/icon_check.png') no-repeat 50% 50%;}
-input[type="checkbox"]:disabled { border:solid 1px #d6d6e3; background-color:#f7f7fa;}
+.checkbox-warp input[type="checkbox"] {opacity:1; position: relative; width:2rem; height:2rem; border: 1px solid #d6d6e3; -webkit-appearance: none; cursor:pointer; }
+.checkbox-warp input[type="checkbox"]:checked {width:2rem; height:2rem; border:1px solid #a50034; background: #a50034 url('../images/icon_check.png') no-repeat 50% 50%;}
+.checkbox-warp input[type="checkbox"]:disabled { border:solid 1px #d6d6e3; background-color:#f7f7fa;}
 
-input[type="radio"] {width:2rem; height:2rem; border: 1px solid #d6d6e3; -webkit-appearance:none; cursor:pointer; border-radius:2.6rem;}
-input[type="radio"]:checked {width:2rem; height:2rem; border:1px solid #a50034; background: #a50034 url('../images/icon_radio.png') no-repeat 50% 50%;}
-input[type="radio"]:disabled { border:solid 1px #d6d6e3; background-color:#f7f7fa;}*/
-
+/* margin */
+.mt20 {margin-top:2rem;}
+.ml10 {margin-left:1rem;}
 
 /* form */
-input[readonly] {color:#adadad!important;}
+input[readonly] {color:#adadad!important;} 
 input[disabled] {background:#f9f9f9;}
 input[type=checkbox],
 input[type=radio] {opacity:0;margin-left:0;position:absolute;/* z-index:-1 */}
 input[type=checkbox] + label,input[type=radio]:focus + label {outline:0;}
-input[type=checkbox] + label {display:inline-block;height:2.4rem;line-height:2.4rem;padding:0 0 0 2.6rem;cursor:pointer;position:relative;font-size:1.4rem;}
-input[type=checkbox] + label:after {content:'';display:inline-block;width:2rem;height:2rem;position:absolute;top:0;left:0;box-sizing:border-box;border: 1px solid #d6d6e3;}
+input[type=checkbox] + label {display:inline-block; height:2.4rem; line-height:2.4rem; padding:0 2rem 0 2.6rem; cursor:pointer; position:relative; font-size:1.4rem;}
+input[type=checkbox] + label:last-of-type {padding:0 0 0 2.6rem;}
+input[type=checkbox] + label:after {content:''; display:inline-block; width:2rem; height:2rem; position:absolute; top:0; left:0; box-sizing:border-box; border: 1px solid #d6d6e3;}
 input[type=checkbox]:checked + label:after {border:1px solid #a50034; background: #a50034 url('../images/icon_check.png') no-repeat 50% 50%;}
 input[type=checkbox]:disabled + label:after,
 input[type=checkbox]:checked:disabled + label:after { border:solid 1px #d6d6e3; background-color:#f7f7fa;}
 
-input[type=radio] + label {display:inline-block;width:2rem; height:2rem;padding:0 0 0 2.6rem;cursor:pointer;position:relative;font-size:1.4rem;}
-input[type=radio] + label:after {content:'';display:inline-block;width:2rem;height:2rem;position:absolute;top:0;left:0;box-sizing:border-box; border:1px solid #a50034; background: #a50034 url('../images/icon_radio.png') no-repeat 50% 50%;}
+input[type=radio] + label {display:inline-block; height:2rem; padding:0 2rem 0 2.6rem; cursor:pointer; position:relative; font-size:1.4rem;}
+input[type=radio] + label:last-of-type {padding:0 0 0 2.6rem;}
+input[type=radio] + label:after {content:''; display:inline-block; border-radius:2.4rem; width:2rem; height:2rem; position:absolute; top:0; left:0; box-sizing:border-box; border:1px solid #d6d6e3; }
 input[type=radio]:checked + label:after {border:1px solid #a50034; background: #a50034 url('../images/icon_radio.png') no-repeat 50% 50%;}
-input[type=radio]:checked:disabled + label { }
 input[type=radio]:checked:disabled + label:after,
-input[type=radio]:disabled + label:after {border:solid 1px #d6d6e3; background-color:#f7f7fa;}
-
+input[type=radio]:disabled + label:after {border:solid 1px #d6d6e3; background-color:#f7f7fa;} 
+ 
 /* --- ui-selectmenu --- */
 .ui-selectmenu-button.ui-button {text-align:left; white-space:nowrap; width:auto; padding:0; height:3.4rem; line-height:3.4rem; border: solid 1px #d6d6e3;border-radius:.4rem; background:#fff url('../images/icon_arrow_dowm.png') no-repeat 100% 50%; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.04);}
 .ui-widget.ui-widget-content { border: solid 1px #d6d6e3;margin-top: -.1rem;}
@@ -148,7 +152,7 @@ a.ui-button:active,
 .block {display:block;}  
 
 /* --- 레이아웃 --- */
-.wrapper {width:100%; height:100%; position:relative; display:table; table-layout:fixed; }   
+.wrapper {width:100%; height:100%; position:relative; display:table; }   
 header {position:relative; height:11.6rem; width:100%; min-width:130rem;z-index:3; } 
 header:after {content:""; position:absolute; top:11.6rem; left:0; right:0; width:100%; z-index:2; border-bottom:2px solid #a50034;}
 header .inner {position:relative; width:120rem; margin:0 auto; z-index:3}
@@ -162,14 +166,14 @@ header .head-info .inner span.family-menu a {flex:1; color:#fff; text-align:cent
 header .head-info .inner span.family-menu a:hover {background:#a50034;}
 header .head-info .inner span.admin-menu a { color:#fff; width:7.4rem; height: 3rem; line-height:3rem; text-align:center; border-radius:.6rem; border:solid 1px #fff;}
 header .head-info .inner span.admin-menu a:hover {background:#a50034; border:solid 1px #a50034;}
-header nav {position:absolute; left:14rem; top:1.8rem; height:4rem; padding-left:2.5rem; z-index: 2;}
-header .after {display:none; content:""; position:absolute;left:0; right:0; width:100%; top:11.6rem; height:28rem; box-sizing: initial; background:#fff; z-index:2;box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.05);} 
-header .after:after {content:""; display:block; width:120rem;  margin:0 auto; }
-header nav .depth01 {display:flex; flex-wrap:wrap; justify-content:flex-start; height:4rem;}  
-header nav .depth01.off > li > .depth02 {overflow: hidden;} 
-header nav .depth01 > li > a {display:block; height:4rem; line-height:4rem; padding:0 1.4rem; font-size:1.6rem; font-weight:600; position:relative; text-align:center;} 
+header nav {position:absolute; left:14rem; top:0; height:7rem; padding-left:2.5rem; z-index: 2;}
+header .after {display:none; content:""; position:absolute; left:0; right:0; width:100%; top:11.6rem; height:28rem; box-sizing: initial; background:#fff; z-index:2;box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.05);} 
+header .after:after {content:""; display:block; width:120rem; margin:0 auto; }
+header nav .depth01 {display:flex; flex-wrap:wrap; justify-content:flex-start; height:7rem;}  
+header nav .depth01.off > li > .depth02 {display:none;} 
+header nav .depth01 > li > a {display:block; height:7rem; line-height:7rem; padding:0 1.4rem; font-size:1.6rem; font-weight:600; position:relative; text-align:center;} 
 header nav .depth01>li>a:hover {color:#a50034;}
-header nav .depth02 {display:none; position:absolute; z-index:11; top:5.2rem; left:0; height:23rem; width:14.4rem; padding:0 2.8rem; box-sizing: initial;  } 
+header nav .depth02 {display:none; position:absolute; z-index:11; top:7.2rem; left:0; height:23rem; width:14.4rem; padding:0 2.8rem; box-sizing: initial;  } 
 header nav .depth02 .depth01-m {display:block; font-size:1.6rem; font-weight:800; line-height: 1.25; margin:2rem 0 0; padding-bottom:3.8rem; border-right:1px solid #e4e4eb;}
 header nav .depth02 .depth01-m strong {display:block; padding-top:.9rem;}
 header nav .depth01 ul {height: 16.5rem;border-right:1px solid #e4e4eb;}
@@ -192,10 +196,10 @@ header .tag-slide .tagSwiper .swiper-slide button {min-width:8.3rem; height:3.6r
 header .side-wrap {position:absolute; right:0; top:1.3rem; z-index:10;}
 header .search-box {position:relative; display:inline-block; width:26rem; height:4.4rem; padding:1.3rem 1.2rem 1.2rem 1.6rem; border-radius:5rem; background-color: #f7f7fa;}
 header .search-box input {width:17rem; height:2.2rem; border:0; background:none; box-shadow:none;}
-header .search-box .btn-delete {width:2.2rem; height:2.2rem; text-indent:-999px; overflow:hidden; background:url('../images/icon_01.png') no-repeat 50% 50%;}
-header .search-box .btn-search {width:2.2rem; height:2.2rem; margin-left:.5rem; text-indent:-999px; overflow:hidden;; background:url('../images/icon_03.png') no-repeat 50% 50%;}
-header .btn-notice {position:relative; margin-left:1.5rem; width:2.6rem; height:2.6rem; text-indent:-999px; overflow:hidden; background:url('../images/icon_02.png') no-repeat 0 0;}
-header .btn-notice:after {content:""; position:absolute; top:0; right:0; width:.4rem; height:.4rem; background-color: #a50034; border-radius:2.4rem;}
+header .search-box .bt-delete {width:2.2rem; height:2.2rem; text-indent:-999px; padding:0!important; overflow:hidden; background:url('../images/icon_01.png') no-repeat 50% 50%;}
+header .search-box .bt-search {width:2.2rem; height:2.2rem; text-indent:-999px; padding:0!important; overflow:hidden;; background:url('../images/icon_03.png') no-repeat 50% 50%;}
+header .bt-notice {position:relative; margin-left:1.5rem; width:2.6rem; height:2.6rem; padding:0!important; text-indent:-999px; overflow:hidden; background:url('../images/icon_02.png') no-repeat 0 0;}
+header .bt-notice:after {content:""; position:absolute; top:0; right:0; width:.4rem; height:.4rem; background-color: #a50034; border-radius:2.4rem;}
 header .name-wrap {display:inline-block; position:relative; margin-left:1.5rem; height:1.9rem; line-height: 1.9; font-size: 1.6rem; font-weight:800;}
 footer {height:3.8rem; margin-top: auto; line-height:3.8rem; background:#f7f7fa; text-align: center; font-size: 1.2rem; color: #a7a9ac; }
 
@@ -221,7 +225,7 @@ footer {height:3.8rem; margin-top: auto; line-height:3.8rem; background:#f7f7fa;
 .swiper-button-wrap .swiper-button-next.swiper-button-disabled:after,
 .swiper-button-wrap .swiper-button-prev.swiper-button-disabled:after{opacity:.5;}
 
-.container.main {padding: 6.6rem 0 8rem;}  
+.container.main {padding: 6.6rem 0 8rem; display:flex; flex-direction: column;}  
 .container.main .inner { width:120rem; margin:0 auto; position: relative;}
 .container.main .inner.type01 { width:122.8rem;}
 .container.main .inner.type01 h2 {padding-left:1.4rem!important;} 
@@ -286,7 +290,7 @@ footer {height:3.8rem; margin-top: auto; line-height:3.8rem; background:#f7f7fa;
 .video-watching {background:#f7f7fa; padding:5rem 0 4.4rem; margin-bottom: 4.4rem;} 
 .video-watching .watchingSwiper {margin-top:-5rem} 
 .video-watching .watchingSwiper .swiper-wrapper {margin-top:6rem; position: relative; z-index: 1;} 
-.video-watching .watchingSwiper .swiper-slide {width:50%!important; margin:0 0; height:16.8rem; padding:0 1.4rem;} 
+.video-watching .watchingSwiper .swiper-slide {width:100%!important; margin:0 0; height:16.8rem; padding:0 1.4rem; display:flex; flex-wrap:wrap; justify-content: space-between;} 
 .video-watching .in-box { display:flex; flex-wrap: wrap; justify-content: flex-start; height:16.8rem; }
 .video-watching .in-box .img-wrap { position:relative; width:30rem; background: #e4e4eb url('../images/icon_04.png') no-repeat 50% 50%; border-radius: 1rem; margin-right:2rem;}
 .video-watching .in-box .img-wrap button {padding-left:3.4rem; letter-spacing: -0.35px; text-align:left; position:absolute; right:1rem; font-size:1.4rem; bottom:1.3rem; color:#fff; width: 13.3rem; height: 3.2rem; border-radius:5rem; background: #a50034 url('../images/icon_play_circle.png') no-repeat 1.4rem 50%;}
@@ -303,7 +307,7 @@ footer {height:3.8rem; margin-top: auto; line-height:3.8rem; background:#f7f7fa;
 .notice-wrap .in-notice ul {width:50%; padding:0 4rem;}
 .notice-wrap .in-notice ul li {display:flex; flex-wrap:wrap; justify-content:space-between; align-items: center; height:5rem; font-size:1.6rem;}
 .notice-wrap .in-notice ul li a { display:block; width:80%; overflow:hidden; text-overflow:ellipsis; white-space: nowrap;}
-.notice-wrap .btn-more {position:absolute; top:0; right:0; width:2rem; height:2rem; background:url('../images/icon_more.png') no-repeat 50% 50%; text-indent:-999px; overflow: hidden; }
+.notice-wrap .bt-more {position:absolute; top:0; right:0; width:2rem; height:2rem; background:url('../images/icon_more.png') no-repeat 50% 50%; text-indent:-999px; overflow: hidden; }
 
 .container.main .dxguide-wrap {margin-bottom:5rem;}
 .dxguide-wrap .guide-warp {display:flex; flex-wrap:wrap; justify-content:space-between;}
@@ -344,7 +348,7 @@ footer {height:3.8rem; margin-top: auto; line-height:3.8rem; background:#f7f7fa;
 .bpcaseSwiper .swiper-slide,
 .assignSwiper .swiper-slide {width:100%!important; display:flex; justify-content:flex-start;} 
 
-.icon-menu { margin-bottom:5rem;}
+.icon-menu { margin-bottom:5rem!important;}
 .icon-menu .icon-menu-area {display:flex; flex-wrap:wrap; justify-content:space-between;}
 .icon-menu .icon-menu-area a {display:block; text-align:center; font-size:1.6rem; width: 18.2rem; height: 12rem; padding: 8.5rem 0 1.7rem; border-radius: 1rem; box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.05); border: solid 1px #e4e4eb; }
 .icon-menu .icon-menu-area .link-question { background:url('../images/icon_08.png') no-repeat 50% 2rem; }
